# xache-protocol

./: .gitignore  LICENSE  README.md
integrations/autogen/: README.md  pyproject.toml
integrations/autogen/xache_autogen/: __init__.py  agent.py  functions.py  memory.py
integrations/common/: README.md  package.json
integrations/common/src/: budget.d.ts  budget.d.ts.map  budget.js  budget.js.map  budget.ts  index.d.ts  index.d.ts.map  index.js  index.js.map  index.ts  pricing.d.ts  pricing.d.ts.map  pricing.js  pricing.js.map  pricing.ts  receipt.d.ts  receipt.d.ts.map  receipt.js  receipt.js.map  receipt.ts  reputation.d.ts  reputation.d.ts.map  reputation.js  reputation.js.map  reputation.ts
integrations/crewai/: README.md  pyproject.toml
integrations/crewai/xache_crewai/: __init__.py  memory.py  tools.py
integrations/extractor/: README.md  package.json  tsconfig.json
integrations/extractor/examples/: anthropic.ts  custom-llm.ts  ollama-local.ts  openai.ts
integrations/extractor/src/: GraphExtractor.ts  MemoryExtractor.ts  index.ts  types.ts
integrations/extractor/src/adapters/: AnthropicAdapter.ts  CustomEndpointAdapter.ts  OllamaAdapter.ts  OpenAIAdapter.ts  base.ts  index.ts
integrations/extractor/src/parsers/: index.ts
integrations/extractor/src/prompts/: graph-templates.ts  templates.ts
integrations/extractor/src/utils/: scrubTrace.ts
integrations/langchain-python/: README.md  pyproject.toml
integrations/langchain-python/xache_langchain/: __init__.py  _async_utils.py  chat_history.py  collective.py  ephemeral.py  extraction.py  graph.py  memory.py  probe.py  reputation.py  retriever.py
integrations/langchain-ts/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
integrations/langchain-ts/src/: chat_history.ts  collective.ts  ephemeral.ts  extraction.ts  graph.ts  index.ts  memory.ts  probe.ts  reputation.ts  retriever.ts
integrations/mcp-server/: README.md  package-lock.json  package.json
integrations/mcp-server/src/: index.ts
integrations/openclaw/: README.md  pyproject.toml
integrations/openclaw-skill/: README.md  SKILL.md
integrations/openclaw/xache_openclaw/: __init__.py  _async_utils.py  config.py  extraction.py  tools.py
integrations/payment-adapters/: README.md  package.json
integrations/payment-adapters/src/: cdp-facilitator.d.ts  cdp-facilitator.d.ts.map  cdp-facilitator.js  cdp-facilitator.js.map  cdp-facilitator.ts  circuit-breaker-wrapper.ts  facilitator-registry.ts  index.d.ts  index.d.ts.map  index.js  index.js.map  index.ts  payment-processor.d.ts  payment-processor.d.ts.map  payment-processor.js  payment-processor.js.map  payment-processor.ts  payment-signer.ts
mcp/: README.md  package.json  pnpm-lock.yaml
mcp/src/: index.ts
sdks/: SDK_PARITY_CHECKLIST.md
sdks/python/: IMPLEMENTATION-PLAN.md  README.md  pyproject.toml  setup.py
sdks/python/tests/: test_auto_contribute.py  test_batch_utils.py  test_fingerprint.py  test_fingerprint_parity.py  test_graph_engine.py  test_http_x402.py  test_memory_service.py  test_signing_parity.py  test_standard_contexts.py  test_subject_keys.py
sdks/python/xache/: __init__.py  client.py  errors.py  types.py
sdks/python/xache/constants/: __init__.py  standard_contexts.py
sdks/python/xache/crypto/: __init__.py  fingerprint.py  signer.py  signer_helpers.py  signing.py  subject.py  wallet.py
sdks/python/xache/graph/: __init__.py
sdks/python/xache/payment/: __init__.py  handler.py
sdks/python/xache/services/: __init__.py  auto_contribute.py  budget.py  collective.py  ephemeral.py  extraction.py  facilitator.py  graph.py  identity.py  memory.py  memory_helpers.py  owner.py  receipts.py  reputation.py  royalty.py  sessions.py  wallet.py  workspaces.py
sdks/python/xache/utils/: __init__.py  batch.py  cache.py  http.py  retry.py
sdks/typescript/: IMPLEMENTATION-PLAN.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
sdks/typescript/src/: XacheClient.ts  index.ts  types.ts
sdks/typescript/src/constants/: StandardContexts.ts
sdks/typescript/src/crypto/: SigningAdapter.test.ts  SigningAdapter.ts  encryption.ts  fingerprint.test.ts  fingerprint.ts  signerHelpers.ts  signing.ts  subject.ts  wallet.ts
sdks/typescript/src/errors/: XacheError.ts
sdks/typescript/src/graph/: GraphEngine.test.ts  GraphEngine.ts  index.ts  types.ts
sdks/typescript/src/payment/: PaymentHandler.ts  SolanaPaymentHandler.ts
sdks/typescript/src/services/: AutoContributeService.ts  BudgetService.ts  CollectiveService.ts  EphemeralService.ts  ExtractionService.ts  FacilitatorService.ts  GraphService.ts  IdentityService.ts  MemoryHelpers.ts  MemoryService.ts  OwnerService.ts  ReceiptService.ts  ReputationService.ts  RoyaltyService.ts  SessionService.ts  WalletService.ts  WorkspaceService.ts
sdks/typescript/src/utils/: batch.ts  cache.ts  http.ts  retry.ts
