[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xache"
version = "5.13.0"

description = "Official Python SDK for Xache Protocol"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Xache Protocol", email = "dev@xache.xyz"}
]
keywords = ["xache", "ai", "agent", "memory", "blockchain", "decentralized"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp>=3.9.0",
    "typing-extensions>=4.0.0",
    "mnemonic>=0.20",
    "eth-account>=0.10.0",
    "eth-keys>=0.4.0",
    "eth-hash[pycryptodome]>=0.5.0",
    "bip-utils>=2.9.0",
    "PyNaCl>=1.5.0",
    "base58>=2.1.1",
    "solders>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pylint>=2.17.0",
]
encryption = [
    "PyNaCl>=1.5.0",
]

[project.urls]
Homepage = "https://xache.xyz"
Documentation = "https://docs.xache.xyz"
Repository = "https://github.com/xacheai/xache-protocol"
"Bug Reports" = "https://github.com/xacheai/xache-protocol/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
show_error_codes = true
# Allow calls from strict modules into non-strict legacy services
disallow_untyped_calls = false

# Core modules — strict, zero tolerance
[[tool.mypy.overrides]]
module = [
    "xache.types",
    "xache.errors",
    "xache.client",
    "xache.graph.*",
    "xache.utils.http",
    "xache.services.memory",
    "xache.services.graph",
]
disallow_untyped_defs = true
disallow_any_generics = true
warn_return_any = true

# Legacy services — relaxed until migrated
[[tool.mypy.overrides]]
module = [
    "xache.services.facilitator",
    "xache.services.reputation",
    "xache.services.workspaces",
    "xache.services.sessions",
    "xache.services.royalty",
    "xache.services.receipts",
    "xache.services.owner",
    "xache.services.collective",
    "xache.services.identity",
    "xache.services.extraction",
    "xache.services.wallet",
    "xache.services.budget",
    "xache.services.auto_contribute",
    "xache.services.memory_helpers",
    "xache.payment.*",
    "xache.crypto.*",
    "xache.utils.retry",
    "xache.utils.cache",
]
disallow_untyped_defs = false
disallow_any_generics = false
warn_return_any = false
strict = false

# Third-party stubs
[[tool.mypy.overrides]]
module = [
    "aiohttp.*",
    "nacl.*",
    "eth_account.*",
    "eth_keys.*",
    "solders.*",
    "mnemonic.*",
    "bip_utils.*",
    "base58.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
